@@ -23,7 +23,8 @@
   global $g_atkconfig;
 
   /**
-   * Config class for loading configfiles and retrieving configoptions.
+   * Config class for loading config files and retrieving config options.
+   * Also contains misc. methods for use in config files.
    *
    *
    * @author Ivo Jansch <ivo@achievo.org>
@@ -55,7 +56,8 @@
         // Module configvar.
         if (!is_array($g_atkconfig[$elems[0]]))
         {
-          atkConfig::loadConfig(ATK_CONFIGROOT.moduleDir().
+          // DISABLED THE FOLLOWING BROKEN LINE
+          //atkConfig::loadConfig(ATK_CONFIGROOT.moduleDir(). 
         }
         return $g_atkconfig[$elems[0]][$elems[1]];
       }
@@ -82,6 +84,70 @@
         }
       }
     }
+    
+    /**
+     * Is debugging enabled for client IP?
+     *
+     * @static
+     */
+    function ipDebugEnabled($params)
+    {
+      $ip = "unknown";
+      if (getenv("HTTP_CLIENT_IP"))
+        $ip = getenv("HTTP_CLIENT_IP");
+      elseif (getenv("HTTP_X_FORWARDED_FOR"))
+        $ip = getenv("HTTP_X_FORWARDED_FOR");
+      elseif (getenv("REMOTE_ADDR"))
+        $ip = getenv("REMOTE_ADDR");
+      
+      return in_array($ip, $params["list"]);
+    }
+    
+    /**
+     * Is debugging enabled by special request variable?
+     *
+     * @static
+     */
+    function requestDebugEnabled($params)
+    {
+      $session = &atkSessionManager::getSession();      
+      
+      if ($_REQUEST["atkdebug"]["key"])
+        $session["debug"]["key"] = $_REQUEST["atkdebug"]["key"];
+      return $session["debug"]["key"] == $params["key"];
+    }
+
+    /**
+     * Returns a debug level based on the given options for
+     * dynamically checking/setting the debug level. If nothing
+     * found returns the default level.
+     *
+     * @static
+     */
+    function smartDebugLevel($default, $options=array())
+    {
+      $session = &atkSessionManager::getSession();
+
+      $enabled = $default > 0;
+      
+      foreach ($options as $option)
+      {
+        $method = $option["type"]."DebugEnabled";
+        if (is_callable(array("atkconfig", $method)))
+          $enabled = $enabled || atkconfig::$method($option);
+      }
+
+      if ($enabled)
+      {
+        if (isset($_REQUEST["atkdebug"]["level"]))
+          $session["debug"]["level"] = $_REQUEST["atkdebug"]["level"];
+          
+        if (isset($session["debug"]["level"]))
+          return $session["debug"]["level"];
+        else return max($default, 1);
+      }
+
+      return 0;
+    }
   }
-  
 ?>
