@@ -63,6 +63,16 @@
   // 2 - Print debug information, and pause before redirects
   $config_debug = 1;
   
+  // Smart debug parameters. Is used to dynamically enable debugging for
+  // certain IP addresses or if for example the special atkdebug[key] request
+  // variable equals a configured key etc. If smart debugging is enabled
+  // you can also change the debug level dynamically using the special
+  // atkdebug[level] request variable.
+  //
+  // $config_smart_debug[] = array("type" => "request", "key" => "test");
+  // $config_smart_debug[] = array("type" => "ip", "list" => array("10.0.0.4"));
+  $config_smart_debug = array();
+  
   //----------------- LAYOUT CONFIGURATION --------------------
 
   // The theme defines the layout of your application. You can see which 
